crates/tun-engine-macros/tests/compile_fail/mutate_frozen.stderr
warning: variable does not need to be mutable
 --> tests/compile_fail/mutate_frozen.rs:9:9
  |
9 |     let mut c = MutC { x: 0 }.freeze();
  |         ----^
  |         |
  |         help: remove this `mut`
  |
  = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0594]: cannot assign to data in dereference of `C`
  --> tests/compile_fail/mutate_frozen.rs:10:5
   |
10 |     c.x = 1; // should fail: Deref only, no DerefMut.
   |     ^^^^^^^ cannot assign
   |
   = help: trait `DerefMut` is required to modify through a dereference, but it is not implemented for `C`
